# C-y-EDA

./: ReadMe.txt  git_push.txt
Proyecto_1/: CMakeLists.txt  main.cpp
Proyecto_2/: CMakeLists.txt  main.cpp
Proyecto_3/: CMakeLists.txt  main.cpp  objetos.h
Proyecto_4/: CMakeLists.txt  main.cpp  rectangulo.cpp  rectangulo.h
Proyecto_5/: CMakeLists.txt  main.cpp
Proyecto_5/include/: libros.h
Proyecto_5/src/: libros.cpp
Proyecto_6/: CMakeLists.txt  main.cpp
Proyecto_6/include/: BinaryTree.h  LinkedList.h
Proyecto_6/src/: BinaryTree.cpp  LinkedList.cpp
Proyecto_7/: CMakeLists.txt  Grafo utilizado  main.cpp
Proyecto_7/include/: Graph.h
Proyecto_7/src/: Graph.cpp
Tp1/Level_1_WarmUp-master/Level_1_WarmUp-master/: CMakeLists.txt  OrbitalSim.cpp  OrbitalSim.h  README.md  View.cpp  View.h  ephemerides.h  main.cpp
eda_plagio_group_4/: nombre_explicacion.txt
eda_plagio_group_4/eda_plagio_group_4/: CMakeLists.txt  README.txt  algorithm.cpp  algorithm.h  datos.txt  file_input_output.cpp  file_input_output.h  main.cpp
eda_plagio_group_4/eda_plagio_group_4/eda_plagio_group_4/: CMakeLists.txt  eda_plagio_group_4.cpp  eda_plagio_group_4.h
examenes/: ReadMe.txt.txt
